cambio visual en la reputacion

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image/svg+xml" href="./media/baloncesto_2.png" />
+    <!-- <link rel="icon" type="image/svg+xml" href="./media/baloncesto_2.png" /> -->
+    <!-- <link rel="icon" type="image/svg+xml" href="./media/icono_Erika.png" /> -->
+    <link rel="icon" type="image/svg+xml" href="https://i.postimg.cc/xCggPBmH/imatge-2025-10-08-191207782.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MatchPoint</title>
   </head>
